Big, fat commit

--- a/content/blog/2012-05-29-post-1.md
+++ b/content/blog/2012-05-29-post-1.md
@@ -2,8 +2,10 @@
 title: Post 1
 slug: post-1
 summary: blah, blah, blah...
-date: 2012-05-29
+date: 2012-12-31
 ---
+
+This post defines a custom `slug` and a custom `date`.
 
 ## Lorem ipsum dolor
 
